Known Issues #13: overwrote default padding to prevent dropdown items skewing right on smallest devices

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -419,6 +419,11 @@ footer {
         font-weight: 800;
     }
 
+    ul {
+        /* Known-Issue #13: dropdown items skewing right on smallest screens */
+        padding-left: 1vh;
+    }
+
 
     /* Main */
 
